--- a/app/src/main/res/layout/content_premium_ideas.xml
+++ b/app/src/main/res/layout/content_premium_ideas.xml
@@ -39,7 +39,7 @@
     android:text="1) STEP ONE. YOU WILL NEED A WEBSITE (CREATE ONE IN AS LITTLE AS ONE DAY)" /> 
 
 <TextView
-	android:id="@+id/explanation"    
+	android:id="@+id/explanation_2"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/instruction_text"     
@@ -56,7 +56,7 @@
     />   
 
 <TextView
-	android:id="@+id/explanation"    
+	android:id="@+id/explanation_3"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/instruction_text"     
@@ -103,7 +103,7 @@
     android:text="2) STEP TWO: REGISTER AS AN AFFILIATE OR FOR ADSENSE (20 MINUTES AND FREE)" />     
     
 <TextView
-	android:id="@+id/marketing_explanation"    
+	android:id="@+id/marketing_explanation_4"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/instruction_text"     
@@ -123,14 +123,14 @@
 
 
 <TextView
-	android:id="@+id/fundraising_heading"    
+	android:id="@+id/fundraising_heading_1"
     android:layout_width="fill_parent"
     style="@style/instruction_heading"
     android:layout_height="wrap_content"
     android:text="3) STEP THREE: BEGIN PROMOTING YOUR BLOG ON WHICH YOU HAVE ADS AND AFFILIATE LINKS" />       
     
 <TextView
-	android:id="@+id/marketing_explanation"    
+	android:id="@+id/marketing_explanation_5"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/instruction_text"     
@@ -150,7 +150,7 @@ For a full marketing crash course and live help expert help, you can get our pre
 
 
 <TextView
-	android:id="@+id/fundraising_heading"    
+	android:id="@+id/fundraising_heading_2"
     android:layout_width="fill_parent"
     style="@style/instruction_heading"
     android:layout_height="wrap_content"
@@ -168,7 +168,7 @@ You can take videos from your computer or phone. But try to have the videos be a
 
 
 <TextView
-	android:id="@+id/explanation"    
+	android:id="@+id/explanation_6"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/instruction_text"     
@@ -182,7 +182,7 @@ You can take videos from your computer or phone. But try to have the videos be a
     android:text="ANOTHER OPTIONAL WAY TO MAKE MONEY: SELL PRODUCTS FROM YOUR SITE" /> 
 
 <TextView
-	android:id="@+id/explanation"    
+	android:id="@+id/explanation_7"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/instruction_text"     
