--- a/app/src/main/res/layout/give_back.xml
+++ b/app/src/main/res/layout/give_back.xml
@@ -130,7 +130,7 @@
     />        
     
 <TextView
-	android:id="@+id/explanation_three"    
+	android:id="@+id/explanation_three1"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop ="15dp" 
