--- a/app/src/main/res/layout/resources.xml
+++ b/app/src/main/res/layout/resources.xml
@@ -83,14 +83,14 @@
     />	
     
 <TextView
-	android:id="@+id/heading_b"    
+	android:id="@+id/heading_b1"
     android:layout_width="fill_parent"
     style="@style/instruction_heading"
     android:layout_height="wrap_content"
     android:text="FUNDRAISING AND LOANS" /> 
     
 <TextView
-	android:id="@+id/explanation"    
+	android:id="@+id/explanation1"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/instruction_text"     
@@ -108,7 +108,7 @@
           
 
 <TextView
-	android:id="@+id/explanation"    
+	android:id="@+id/explanation2"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/instruction_text"     
@@ -124,7 +124,7 @@
     /> 
     
 <TextView
-	android:id="@+id/explanation"    
+	android:id="@+id/explanation3"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/instruction_text"     
@@ -148,7 +148,7 @@
     android:text="EARN REVENUE BY TAKING ONLINE SURVEYS AND POLLS" /> 
 
 <TextView
-	android:id="@+id/explanation"    
+	android:id="@+id/explanation4"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/instruction_text"     
