--- a/app/src/main/res/layout/business_book.xml
+++ b/app/src/main/res/layout/business_book.xml
@@ -14,50 +14,168 @@
 	
 	        	        <include android:id="@+id/header"
          layout="@layout/header"/>
-	        
-
-<TextView
-	android:id="@+id/heading_1"    
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="THE BOOK BASED ON THIS APP, FOCUSING ON BUSINESS IDEAS AND STARTING YOUR BUSINESS"    
-    style="@style/instruction_heading"
-    />
 
 
-<TextView
-	android:id="@+id/page_exlain"    
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="Dear friends,
-
-\n\nLet me tell you the story of this app. When I first built it, I provided free help to every user of the app who asked for help. I spent countless hours helping people from different countries, and with different businesses. I became friends and stayed in touch with many of them. After a while, this app became one of the top business apps on Android, and I was not able to help everyone who asked for help simply because too many people were asking for help.
-
-\n\nSo I had to make help a paid feature. But by that time, I had helped over 1,000 people. And to date, over 300,000 people have benefited from my apps. And I am extremely excited to announce that I wrote a book that covers all the questions that people have asked me during my conversations with the 1,000+ entrepreneurs whom I personally helped (with all privacy preserved).
-
-\n\nSince the book was written based on the cumulative experience of all the entrepreneurs who came before you, I almost guarantee that it covers many of the issues you are curious about yourself.
-"
-    style="@style/instruction_text"
-    />          
 
 
-<TextView
-	android:id="@+id/page_exlain_two"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="And the print version of the book is available on Amazon.com"
-    style="@style/instruction_text"
-    />          
+            <TextView
+                android:id="@+id/heading_subscription"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/light_best_blue"
+                android:text="GET MORE HELP WITH BUSINESS AND MARKETING BOOKS"
+                />
+
+            <TextView
+                android:id="@+id/explanation_books"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop ="5dp"
+                style="@style/instruction_text"
+                android:text="The step by step guide on how to start a business."
+                />
+
+            <Button
+                android:id="@+id/niche"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginTop ="5dp"
+                style="@style/home_page_buttons"
+                android:text="How to find your business niche"
+                />
+
+            <Button
+                android:id="@+id/startbusiness"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginTop ="5dp"
+                style="@style/home_page_buttons"
+                android:text="Book on how to start a business"
+                />
+
+            <Button
+                android:id="@+id/appbook"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginTop ="5dp"
+                style="@style/home_page_buttons"
+                android:text="Learn to succeed in the mobile app business"
+                />
 
 
-<Button
-	android:id="@+id/amazon"        
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="Get The Book on Amazon.com"
-    style="@style/home_page_buttons" 
-    android:layout_marginTop ="10dp"    
-    />
+            <TextView
+                android:id="@+id/promoting_heading"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/light_best_blue"
+                android:text="PROMOTING YOUR BUSINESS"
+                />
+
+            <TextView
+                android:id="@+id/explanation_courses"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop ="5dp"
+                style="@style/instruction_text"
+                android:text="When most people start a business, they say that they will promote their businesses with Flyers, business cards, Twitter and Facebook. If that sounds like your strategy, here are those 4 books for you:"
+                />
+
+            <Button
+                android:id="@+id/card"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginTop ="5dp"
+                style="@style/home_page_buttons"
+                android:text="Business card marketing and networking"
+                />
+
+            <Button
+                android:id="@+id/flier"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginTop ="5dp"
+                style="@style/home_page_buttons"
+                android:text="Flier marketing"
+                />
+
+            <Button
+                android:id="@+id/twitter"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginTop ="5dp"
+                style="@style/home_page_buttons"
+                android:text="Twitter marketing"
+                />
+
+            <Button
+                android:id="@+id/facebook"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginTop ="5dp"
+                style="@style/home_page_buttons"
+                android:text="Facebook marketing"
+                />
+
+            <Button
+                android:id="@+id/strategiesbook"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginTop ="5dp"
+                style="@style/home_page_buttons"
+                android:text="Marketing strategies to reach 1,000,000 people"
+                />
+            <!--
+                        <TextView
+                            android:id="@+id/planbooks"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop ="5dp"
+                            style="@style/instruction_text"
+                            android:text="Learn proper business planning"
+                            />
+            -->
+            <TextView
+                android:id="@+id/planbooks"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/light_best_blue"
+                android:text="LEARN PROPER BUSINESS PLANNING"
+                />
+
+            <Button
+                android:id="@+id/businessplan"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginTop ="5dp"
+                style="@style/home_page_buttons"
+                android:text="How to write a business plan"
+                />
+
+            <Button
+                android:id="@+id/marketingplan"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginTop ="5dp"
+                style="@style/home_page_buttons"
+                android:text="How to write a marketing plan"
+                />
+
+            <TextView
+                android:id="@+id/books_authorpage"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/light_best_blue"
+                android:text="SEE MY FULL AMAZON AUTHOR PAGE WITH 18 BOOKS"
+                />
+
+            <Button
+                android:id="@+id/amznauthor"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginTop ="5dp"
+                style="@style/home_page_buttons"
+                android:text="Browse My Amazon Author Page"
+                />
 
 
 
