--- a/app/src/main/res/layout/extra_help.xml
+++ b/app/src/main/res/layout/extra_help.xml
@@ -22,7 +22,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/instruction_heading"   
-    android:text="OUR FREE APPS"
+    android:text="FULL FREE 4-APP BUSINESS COURSE"
     />
 
 
@@ -31,7 +31,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/instruction_text"    
-    android:text="We offer a free business ideas app and a free business plan apps. The business idea apps explains some of the theory of business ideas, how to get them, how to tell which are good and more. And the business plan app teaches how to plan and start your business."/>
+    android:text="This app is one in a series of 4 apps which guide you on some of the top issues that come up when starting a business. Additional apps are a free business ideas app, and a free business plan app, and a free marketing app. The apps are free so download the other three apps to have all 4 to get maximum benfit."/>
 
 <Button
 	android:id="@+id/free_ideas_app"        
@@ -46,17 +46,26 @@
 	android:id="@+id/free_plan_app"        
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:text="Business Business Plan App"
+    android:text="Business Plan App"
     android:layout_marginTop ="10dp"    
     style="@style/home_page_buttons"
     />
+
+            <Button
+                android:id="@+id/free_marketing_app"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Marketing App"
+                android:layout_marginTop ="10dp"
+                style="@style/home_page_buttons"
+                />
 
 <TextView
 	android:id="@+id/heading_1"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/instruction_heading"   
-    android:text="OUR PREMIUM APPS"
+    android:text="GET MORE HELP WITH PREMIUM APPS"
     />
 
 
@@ -65,7 +74,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/instruction_text"    
-    android:text="We offer a 4-app business starting course based on the experiences of over 100,000 entrepreneurs who have used all our apps in the past, and the over 20,000 businesses that have been planned through all our apps. The other parts of the course are:
+    android:text="I also offer a premium 4-app business starting course based on the experiences of over 100,000 entrepreneurs who have used all my apps in the past. On the premium apps you can ask me questions and I'll do my best to help you with whatever business challenges you are facing. The premium apps are:
 \n1) Business ideas
 \n2) Business plan
 \n3) Marketing 
@@ -84,7 +93,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/instruction_text"  
-    android:text="Business ideas may seem like a simplistic topic, but many businesses go wrong at precisely the idea stage.  We compiled a number of guides and articles to help avoid common pitfalls and help get you on the right track."/>
+    android:text="Business ideas may seem like a simplistic topic, but many businesses go wrong at precisely the idea stage. I compiled a number of guides and articles to help avoid common pitfalls and help get you on the right track."/>
 
 <Button
 	android:id="@+id/business_ideas_app"        
@@ -135,7 +144,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/instruction_text"    
-    android:text="Being able to effectively market and promote your business is the lifeline of your business. For that reason we created the marketing-plan app which has a number of articles and software tools to help you learn how to plan and exective your marketing strategies."
+    android:text="Being able to effectively market and promote your business is the lifeline of your business. For that reason I created the marketing-plan app which has a number of articles and software tools to help you learn how to plan and exective your marketing strategies."
     />   
 
 <Button
@@ -160,7 +169,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/instruction_text"    
-    android:text="This app has a large overlap with the fundraising app. But on the fundraising app, we provide live expert help. So if you would like to get advice."
+    android:text="This app has a large overlap with this app. But on the fundraising app, I provide live expert help if you would like to get advice."
     />   
 
 <Button
