--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -5,50 +5,25 @@ android:layout_height="wrap_content"
 >
     
  <Button android:id="@+id/home_header"
-  android:layout_width="0dp" 
-  android:layout_height="wrap_content"
-  android:layout_weight="1"
-  android:textColor="@color/white"
+     style="@style/header_buttons"
   android:text="Home"
-  android:background="@drawable/ic_menu_not"
-  android:textSize="11dp"
-/> 
- 
-   
+
+/>
  
  <Button android:id="@+id/learn_header"
-  android:layout_width="0dp" 
-  android:layout_height="wrap_content"
-  android:layout_weight="1"
   android:text="Learn"
-  android:textColor="@color/white"
-  android:textSize="11dp"
-  android:background="@drawable/ic_menu_not"
-  android:layout_toRightOf="@+id/businesses_header"
+     style="@style/header_buttons"
  />   
  
  
 <Button android:id="@+id/questions_header"
- android:layout_width="0dp" 
- android:layout_height="wrap_content"
- android:textColor="@color/white"
- android:layout_weight="1"
  android:text="Plans"
- android:textSize="11dp"
-   android:background="@drawable/ic_menu_not"
-android:layout_toRightOf="@+id/learn_header"  />  
- 
-
+    style="@style/header_buttons"
+    />
  
  <Button android:id="@+id/extra_help_header"
-  android:layout_width="0dp" 
-  android:layout_height="wrap_content"
-  android:layout_weight="1"
-  android:textColor="@color/white"
   android:text="More Help"
-  android:textSize="11dp"
-  android:background="@drawable/ic_menu_not"
-  android:layout_toRightOf="@+id/questions_header"
+     style="@style/header_buttons"
  />   
  
 </LinearLayout>
