--- a/app/src/main/res/layout/motivation.xml
+++ b/app/src/main/res/layout/motivation.xml
@@ -24,7 +24,7 @@
 	android:id="@+id/exec_summary_heading"    
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" 
-	android:text="JOIN US ON FACEBOOK, TWITTER, YOUTUBE AND GET OUR EMAIL UPDATES"
+	android:text="JOIN US ON FACEBOOK, TWITTER, YOUTUBE AND GET MY EMAIL UPDATES"
 	style="@style/instruction_heading"
 	/>
 
@@ -32,7 +32,7 @@
 	android:id="@+id/summary_text"    
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:text="By liking and subscribing to our pages, you will get more free tutorials, and be the first to learn about free and discounted deals on any of our products. Plus get access to LOTS of free tutorials to help you start and grow your business."
+    android:text="By liking and subscribing to my pages, you will get more free tutorials, and be the first to learn about free and discounted deals on any of my products. Plus get access to LOTS of free tutorials to help you start and grow your business."
 	style="@style/instruction_text"   
     />     
 
@@ -41,7 +41,7 @@
 	android:id="@+id/fb"        
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:text="Join Our Facebook Group"
+    android:text="Join My Facebook Group"
     android:padding="10dp"
     style="@style/home_page_buttons"  
     />
@@ -59,7 +59,7 @@
 	android:id="@+id/newsletter"        
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:text="Subscribe To Our Email Updates And Tutorials From Our Blog"
+    android:text="Subscribe To My Email Updates And Extra Business Tips"
     android:padding="10dp"
     style="@style/home_page_buttons"  
     />
@@ -68,7 +68,7 @@
 	android:id="@+id/youtube"        
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:text="Subscribe To Our YouTube Channel"
+    android:text="Subscribe To My YouTube Channel"
     android:padding="10dp"
     style="@style/home_page_buttons"  
     />	        
