--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -13,9 +13,20 @@
     <item name="android:textStyle">bold</item>   
     <item name="android:color">@color/white</item>  
     <item name="android:layout_height">45dip</item>
-    
-    <!-- <item name="android:background">@drawable/white_button</item>  -->
+
 </style>
+
+    <style name="header_buttons">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@android:color/darker_gray</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+    </style>
 
 <style name="home_page_two_buttons">    
     <item name="android:textStyle">bold</item>   
