--- a/app/src/main/res/layout/coaching.xml
+++ b/app/src/main/res/layout/coaching.xml
@@ -58,7 +58,7 @@
                 android:layout_height="fill_parent"
                 android:layout_marginTop ="5dp"
                 style="@style/home_page_buttons"
-                android:text="Get Help Via Chat On This App"
+                android:text="Get Coaching On My Apps"
                 />
 
             <Button
